# rs-pcd

./: .gitignore  Cargo.toml  README.md  README_zh.md  example_data.pcd  perf_100000_binary.pcd  perf_100000_compressed.pcd
examples/: basic_usage.rs  iterate_points.rs
src/: error.rs  lib.rs
src/decoder/: ascii.rs  binary.rs  binary_par.rs  compressed.rs  endian.rs  mod.rs  slice.rs
src/header/: builder.rs  mod.rs  parser.rs
src/io/: mod.rs  reader.rs  writer.rs
src/layout/: mod.rs
src/storage/: mod.rs  view.rs
tests/: dynamic_fields_test.rs  integration_test.rs  large_file_test.rs
