[package]
name = "rs-pcd"
version = "0.1.0"
edition = "2021"
description = "is a modern, pure-Rust library designed for parsing and processing PCD files with a focus on speed, safety, and correctness. It is built for high-throughput applications like autonomous driving and 3D perception."
license = "Apache-2.0"
repository = "https://github.com/bigpear0201/rs-pcd"

[dependencies]
byteorder = "1.5.0"
bytes = "1.11.0"
flate2 = "1.1.5"
lzf = "1.0.0"
memmap2 = { version = "0.9.9", optional = true }
rayon = { version = "1.11.0", optional = true }
thiserror = "2.0.17"

[features]
memmap2 = ["dep:memmap2"]
rayon = ["dep:rayon"]

[dev-dependencies]
anyhow = "1.0.100"
rand = "0.9.2"
tempfile = "3.24.0"
